--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:5005
+VITE_API_URL=https://f4hwv2qm-5005.uks1.devtunnels.ms
 VITE_CLOUD_NAME=ds3pbi0pa
-
+#VITE_API_URL=http://localhost:5005
